force-app/main/default/objects/SW_Quality_by_Release_and_Affect_Version__c/SW_Quality_by_Release_and_Affect_Version__c.object-meta.xml
<CustomObject>
    <label>SW Quality by Release and Affect Version</label>
    <nameField>
        <label>SW Quality by Release and Affect Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Quality by Release and Affect Vrsns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>