force-app/main/default/objects/SW_Quality_by_Release_and_Affect_Version__c/fields/Affects_Version__c.field-meta.xml
<CustomField>
    <fullName>Affects_Version__c</fullName>
    <label>Affects Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>