force-app/main/default/objects/SW_Quality_by_Release_and_Affect_Version__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <label>Issue Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>