force-app/main/default/objects/SW_Quality_by_Release_and_Affect_Version__c/fields/Issue_Key_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key_Notes__c</fullName>
    <label>Issue Key Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>