force-app/main/default/objects/SW_Quality_by_Release_and_Affect_Version__c/fields/Releasedate__c.field-meta.xml
<CustomField>
    <fullName>Releasedate__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>